--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.8</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
